syntax = "proto3";
package com.nok.proto;

option java_package = "com.nok.proto";
option java_multiple_files = true;

message Address {
  string street_name   = 1;
  string street_number = 2;
  string city          = 3;
  string postcode      = 4;
  bool   is_current    = 5;
}