syntax = "proto3";
package com.nok.proto;

option java_package = "com.nok.proto";
option java_multiple_files = true;

import "address.proto";

enum UserSeniority {
  USER_SENIORITY_UNSPECIFIED = 0;
  J = 1;
  M = 2;
  S = 3;
}

message UserCreateCommand {
  string email            = 1;
  string first_name       = 2;
  string last_name        = 3;
  string phone_number     = 4;
  int32  years_experience = 5;
  Address address         = 6;
}

message UserCreatedEvent {
  int64  id               = 1;
  string email            = 2;
  string first_name       = 3;
  string last_name        = 4;
  string phone_number     = 5;
  int32  years_experience = 6;
  UserSeniority seniority = 7;
  Address address         = 8;
}
